# apps/backend/src/courier-task/courier-task.controller.ts
@@ -1,8 +1,19 @@
-import { Body, Controller, Post, Req, Res } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  Put,
+  Query,
+  Req,
+  Res,
+} from '@nestjs/common';
 import { FastifyReply, FastifyRequest } from 'fastify';
 import { CreateCourierTaskDTO } from './dto/create';
-import { repl } from '@nestjs/core';
 import { CourierTaskService } from './courier-task.service';
+import { GetDeliveryTasksQueryDTO } from './dto/get';
+import { parse } from 'date-fns';
+import { TogglePaidStateBodyDTO } from './dto/update';
 
 @Controller('courierTask')
 export class CourierTaskController {
@@ -17,5 +28,40 @@ export class CourierTaskController {
     console.log(body);
     const task = await this.courierTaskService.createCourierTask(body);
     return reply.send(task);
+  }
+
+  @Get()
+  async getCouriersTasksHandler(
+    @Req() req: FastifyRequest,
+    @Res() reply: FastifyReply,
+    @Query() query: GetDeliveryTasksQueryDTO,
+  ) {
+    const { type, startDate, finishDate } = query;
+    const convertedStartDate = parse(startDate, 'dd-MM-yyyy:HH:mm', new Date());
+    const convertedFinishDate = finishDate
+      ? parse(finishDate, 'dd-MM-yyyy:HH:mm', new Date())
+      : undefined;
+
+    console.log('convertedStartDate', convertedStartDate);
+    console.log('convertedFinishDate', convertedFinishDate);
+    const tasks = await this.courierTaskService.getCourierTasksByDateAndType(
+      type,
+      convertedStartDate,
+      convertedFinishDate,
+    );
+
+    return reply.send(tasks);
+  }
+
+  @Put('togglePaid')
+  async togglePaidHandler(
+    @Req() req: FastifyRequest,
+    @Res() reply: FastifyReply,
+    @Body() body: TogglePaidStateBodyDTO,
+  ) {
+    const { id } = body;
+    const newDeliveryTask =
+      await this.courierTaskService.togglePaidStateDeliveryTask(id);
+    return reply.send(newDeliveryTask);
   }
 }
