# apps/backend/src/courier-task/courier-tast.types.ts
@@ -1,4 +1,4 @@
-export enum ECourierType {
+export enum ECourierDeliveryType {
   DELIVERY = 'delivery',
   PICKUP = 'pickup',
 }
